--- a/api-reference/image-generation/model-operation/overview.mdx
+++ b/api-reference/image-generation/model-operation/overview.mdx
@@ -1,19 +1,17 @@
 ---
 title: "Overview"
+description: 'Collection of APIs for model operations.'
 ---
 
-## Overview[​](#overview "Direct link to Overview")
-
-Get the List is Model Operation related endpoint
-
-### Model List[​](#model-list "Direct link to Model List")
-
-Get list of available models on the platform
-
-### Upload Model[​](#upload-model "Direct link to Upload Model")
-
-This endpoints is used to upload all supported model formats
-
-### Finetune List[​](#finetune-list "Direct link to Finetune List")
-
-This endpoints allows you to get list of trained models
+### Endpoints
+<CardGroup>
+  <Card title="Finetune List" href="/api-reference/image-generation/flux/flux-text-to-image">
+    This endpoint returns an array with the IDs of the models that you have created.
+  </Card>
+  <Card title="Upload Model" href="/api-reference/image-generation/flux/flux-text-to-image">
+    This endpoint is used to load a private or public model
+  </Card>
+  <Card title="Model List" href="/api-reference/image-generation/flux/flux-text-to-image">
+   This endpoint returns a list of all the public models available.
+  </Card>
+</CardGroup>
