--- a/api-reference/image-generation/realtime-stable-diffusion/fetchimage.mdx
+++ b/api-reference/image-generation/realtime-stable-diffusion/fetchimage.mdx
@@ -1,82 +1,21 @@
 ---
 title: "Fetch Queued Images Endpoint"
 openapi: 'POST /fetch/{id}'
+description: 'Fetch Queued Images API fetches queued images from stable diffusion.'
 ---
 
-## Overview[​](#overview "Direct link to Overview")
-
-Fetch Queued Images API fetches queued images from stable diffusion.
-
-Usually more complex image generation requests take more time for processing. Such requests are being queued for processing and the output images are retrievable after some time.
-
-![Fetch Queued Images endpoint result](\images\image-generation\realtime-stable-diffusion\assets\images\Realtime-fetch-c14019fe06b12fc31a945b229590413c.jpg)
-
-## Request[​](#request "Direct link to Request")
-
-```
+<Note>
+ This endpoint does not generate new images, it returns already generated/queued images.
+</Note>
+## Request
+Send a `POST` request to below endpoint to return the corresponding queued images. 
+```curl curl
 --request POST 'https://modelslab.com/api/v6/realtime/fetch/{id}' \
 ```
 
-Send a `POST` request to [https://modelslab.com/api/v6/realtime/fetch/\{id}](https://modelslab.com/api/v6/realtime/fetch/%7Bid%7D) endpoint to return the corresponding queued images. Where `{id}` is the ID returned together with the image URL in the response upon its generation. This endpoint does not generate new images, it returns already generated/queued images.
-
-## Attributes[​](#attributes "Direct link to Attributes")
-
-| Parameter | Description                                 |
-| :-------- | :------------------------------------------ |
-| **key**   | Your API Key used for request authorization |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body Raw
-
-```
-{ "key": ""}
-```
-
-### Request[​](#request-1 "Direct link to Request")
-
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
-
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({ "key": ""});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v6/realtime/fetch/12202888", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
-
-```
-<?php$payload = [  "key" => ""];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v6/realtime/fetch/12202888',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
-
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v6/realtime/fetch/12202888',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": ""  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
-
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v6/realtime/fetch/12202888"payload = json.dumps({ "key": ""})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
-
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\": \"\"\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v6/realtime/fetch/12202888")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
-
-### Response[​](#response "Direct link to Response")
-
-* Success
-* Processing
-* Error
-
-```
-{    "status": "success",    "id": 134686749,    "output": [        "https://modelslab-bom.s3.amazonaws.com/modelslab/da199aff-7162-424d-8e25-f365bcee1e28-0.jpg"    ],    "proxy_links": [        "https://modelslab-bom.s3.amazonaws.com/modelslab/da199aff-7162-424d-8e25-f365bcee1e28-0.jpg"    ]}
-```
-
-```
-{    "status": "processing",    "message": "try again later.",    "output": "",    "tip": "Get 20x faster image generation using enterprise plan. Click here : https://modelslab.com/enterprise"}
-```
-
-```
-{    "status": "error",    "message": "Error message"}
+## Body
+```json json
+{ 
+    "key": ""
+}
 ```
