--- a/api-reference/image-generation/realtime-stable-diffusion/image-to-image.mdx
+++ b/api-reference/image-generation/realtime-stable-diffusion/image-to-image.mdx
@@ -7,6 +7,10 @@ description: 'Generates a new image from a existing image.'
 
 ![Image to image endpoint result](/images/image-generation/realtime-stable-diffusion/assets/images/Realtime-Image-to-image-9643cb98e1b294f96c3c632d9e6202fd.jpg)
 
+<Note>
+    This API currently supports the following image formats: **`PNG`** and **`JPG`**.
+</Note>
+
 ## Request
 Make a `POST` request to below endpoint and pass the required parameters as a request body to the endpoint.
 ```curl curl
