--- a/api-reference/image-generation/realtime-stable-diffusion/inpaint.mdx
+++ b/api-reference/image-generation/realtime-stable-diffusion/inpaint.mdx
@@ -6,6 +6,10 @@ description: 'Generates and returns an image from an image and a mask.'
 
 ![Inpainting endpoint result](/images/image-generation/realtime-stable-diffusion/assets/images/Realtime-inpainting-620336ac69c1ce8e66904c1d1942eebc.jpg)
 
+<Note>
+    This API currently supports the following image formats: **`PNG`** and **`JPG`**.
+</Note>
+
 ## Request
 Make a `POST` request to below endpoint and pass the required parameters as a request body.
 ```curl curl
