--- a/api-reference/image-generation/train-model/base64-crop.mdx
+++ b/api-reference/image-generation/train-model/base64-crop.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Upload Base64 Image and Crop"
 openapi: 'POST /base64_crop'
-description: 'lets upload an image and crop it.'
+description: 'lets you upload an image in base64 and crop it.'
 ---
 
 ## Request
