--- a/release-notes/api.mdx
+++ b/release-notes/api.mdx
@@ -1,4 +1,24 @@
 ---
-title: 'API'
+title: 'API '
 description: 'Follow along with updates across ModelsLab API and Developer Console.'
 ---
+
+
+
+<Update label="2025-06-06" description="v0.1.1">
+  <Frame>
+    <img className="block" src="https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/pdzkuYu2KSzjtJkxy2rVoCdbGcDXb6-metaM2RfcGxheWdyb3VuZC5wbmc=-.png" />
+  </Frame>
+
+  ## Changelog
+
+  New 3D Model Viewer in 3DVerse Playground.
+
+  #### Features
+
+  * Environment Presets
+  * Light Controls
+  * Bloom Intensity Control
+  * Orbit Controls
+  * Pivot Controls
+</Update>
