--- a/api-guide/apis/enterprise-api/3d-api/update-server.mdx
+++ b/api-guide/apis/enterprise-api/3d-api/update-server.mdx
@@ -1,10 +1,12 @@
 ---
-title: "Enterprise: Update Server Endpoint"
+title: "Update Server"
+description: "This endpoint is used to update your dedicated server"
+openapi: "POST /update_server"
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
 
-This endpoint is used to update your dedicated server. As a response you will receive information about the result of the update command.
+. As a response you will receive information about the result of the update command.
 
 ## Request[​](#request "Direct link to Request")
 
