--- a/api-guide/apis/enterprise-api/3d-api/overview.mdx
+++ b/api-guide/apis/enterprise-api/3d-api/overview.mdx
@@ -1,29 +1,37 @@
 ---
-title: "Enterprise: 3D API"
+title: "Overview"
+description: "Collection of endpoints that enable you to transform images or text into 3D representations."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+<Tip>
+    Not on Enterprise yet? Get your enterprise plan at [ModelsLab](https://modelslab.com/enterprise)
+</Tip>
 
-Generate 3D rendering from text and image using this endpoints
+### Endpoints
 
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
-
-### Text to 3D Endpoint[​](#text-to-3d-endpoint "Direct link to Text to 3D Endpoint")
-
-This endpoint generates 3D from text.
-
-### Image to 3D Endpoint[​](#image-to-3d-endpoint "Direct link to Image to 3D Endpoint")
-
-This endpoint generates 3D from image.
-
-### Fetch Queued 3D Response Endpoint[​](#fetch-queued-3d-response-endpoint "Direct link to Fetch Queued 3D Response Endpoint")
-
-This endpoint returns an already generated response by passing its **ID** with the endpoint location. This ID is specified by the **id** parameter in the response returned upon the request execution.
-
-### Clear Server Cache Endpoint[​](#clear-server-cache-endpoint "Direct link to Clear Server Cache Endpoint")
-
-This endpoint clear server cache
-
-### Restart Server Endpoint[​](#restart-server-endpoint "Direct link to Restart Server Endpoint")
-
-This endpoint restart the server
+<CardGroup>
+    <Card title="Text to 3D" href="/api-guide/enterprise-api/3d-api/text-to-3d">
+        This endpoint generates 3D from text.
+    </Card>
+    <Card title="Image to 3D" href="/api-guide/enterprise-api/3d-api/image-to-3d">
+        This endpoint generates 3D from an image.
+    </Card>
+    <Card title="Fetch Queued 3D" href="/api-guide/enterprise-api/3d-api/fetch">
+        This endpoint returns an already generated response by passing its **ID** with the endpoint location.
+    </Card>
+    <Card title="Clear Cache" href="/api-guide/enterprise-api/3d-api/clear-cache">
+        This endpoint clears the server cache.
+    </Card>
+    <Card title="Clear Queue" href="/api-guide/enterprise-api/3d-api/clear-queue">
+        This endpoint clears the server queue.
+    </Card>
+    <Card title="Update Server" href="/api-guide/enterprise-api/3d-api/update-server">
+        This endpoint updates the server to the latest version.
+    </Card>
+    <Card title="Restart Server" href="/api-guide/enterprise-api/3d-api/restart-server">
+        This endpoint restarts the server.
+    </Card>
+    <Card title="System Details" href="/api-guide/enterprise-api/3d-api/system-details">
+        This endpoint provides system details of your enterprise server.
+    </Card>
+</CardGroup>
