ep deepfake api

--- a/api-guide/apis/enterprise-api/3d-api/fetch.mdx
+++ b/api-guide/apis/enterprise-api/3d-api/fetch.mdx
@@ -18,6 +18,6 @@ Send a `POST` request to below endpoint to return the corresponding queued image
 ## Body
 ```json json
 { 
-    "key": ""
+    "key": "enterprise_api_key"
 }
 ```
