--- a/api-guide/apis/enterprise-api/3d-api/text-to-3d.mdx
+++ b/api-guide/apis/enterprise-api/3d-api/text-to-3d.mdx
@@ -16,7 +16,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body
 ```json json
 {    
-  "key": "",    
+  "key": "enterprise_api_key",    
   "foreground_ratio": "0.85",    
   "prompt": "a ghost wearing white bedsheet",    
   "num_inference_steps": "30",    
