--- a/api-guide/apis/enterprise-api/deepfake/overview.mdx
+++ b/api-guide/apis/enterprise-api/deepfake/overview.mdx
@@ -1,37 +1,39 @@
 ---
-title: "Enterprise: Deepfake API"
+title: "Overview"
+description: "The Deepfake Endpoints bring a collection of interesting endpoints that allow you to generate interactive videos and images."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+## Endpoints
 
-The Deepfake Endpoints brings a collection of interesting endpoints that allows you generates interactive video and images
-
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
-
-### Single Face Swap[​](#single-face-swap "Direct link to Single Face Swap")
-
-Single Face Swap endpoint allows swapping faces in a single image
-
-### Multiple Face Swap[​](#multiple-face-swap "Direct link to Multiple Face Swap")
-
-Multiple Face Swap endpoint allows swapping faces in all detected faces within a single image.
-
-### Single Video Swap[​](#single-video-swap "Direct link to Single Video Swap")
-
-Single Video Swap endpoint allows swapping faces in all detected faces within a single video.
-
-### Specific Video Swap[​](#specific-video--swap "Direct link to Specific Video  Swap")
-
-Specific Video Swap endpoint allows swapping specific faces according to reference face.
-
-### Clear Server Cache Endpoint[​](#clear-server-cache-endpoint "Direct link to Clear Server Cache Endpoint")
-
-This endpoint clear server cache
-
-### Restart Server Endpoint[​](#restart-server-endpoint "Direct link to Restart Server Endpoint")
-
-This endpoint restart the server
-
-### Fetch Request[​](#fetch-request "Direct link to Fetch Request")
-
-This endpoint to fetch queued and processing rrequest
+<CardGroup>
+  <Card title="Specific Face Swap" href="/api-guide/enterprise-api/deepfake/specific-face-swap">
+    The Single Face Swap endpoint allows swapping faces in a single image.
+  </Card>
+  <Card title="Multiple Face Swap" href="/api-guide/enterprise-api/deepfake/multiple-face-swap">
+    The Multiple Face Swap endpoint allows swapping faces in all detected faces within a single image.
+  </Card>
+  <Card title="Single Video Swap" href="/api-guide/enterprise-api/deepfake/single-video-swap">
+    The Single Video Swap endpoint allows swapping faces in all detected faces within a single video.
+  </Card>
+  <Card title="Specific Video Swap" href="/api-guide/enterprise-api/deepfake/specific-video-swap">
+    The Specific Video Swap endpoint allows swapping specific faces according to a reference face.
+  </Card>
+  <Card title="Clear Server Cache" href="/api-guide/enterprise-api/deepfake/clear-cache">
+    This endpoint clears the server cache.
+  </Card>
+  <Card title="Restart Server" href="/api-guide/enterprise-api/deepfake/restart-server">
+    This endpoint restarts the server.
+  </Card>
+  <Card title="Fetch Request" href="/api-guide/enterprise-api/deepfake/fetch">
+    This endpoint fetches queued and processing requests.
+  </Card>
+  <Card title="Clear Queue" href="/api-guide/enterprise-api/deepfake/clear-queue">
+    This endpoint clears the server queue.
+  </Card>
+  <Card title="System Details" href="/api-guide/enterprise-api/deepfake/system-details">
+    This endpoint provides system details of your server.
+  </Card>
+  <Card title="Update Server" href="/api-guide/enterprise-api/deepfake/update-server">
+    This endpoint updates the server to the latest version.
+  </Card>
+</CardGroup>
