--- a/api-guide/apis/enterprise-api/deepfake/multiple-face-swap.mdx
+++ b/api-guide/apis/enterprise-api/deepfake/multiple-face-swap.mdx
@@ -1,71 +1,46 @@
 ---
-title: "Enterprise: Multiple Face Swap Endpoint"
+title: "Multiple Face Swap Endpoint"
+description: "Multiple Face Swap endpoint allows swapping faces in all detected faces within a single image."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
 
-Multiple Face Swap endpoint allows swapping faces in all detected faces within a single image.
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Make a `POST` request to below endpoint and pass the required parameters in the request body.
+```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/deepfake/multiple_face_swap' \
 ```
 
-Make a `POST` request to [https://modelslab.com/api/v1/enterprise/deepfake/multiple\_face\_swap](https://modelslab.com/api/v1/enterprise/deepfake/multiple_face_swap) endpoint and pass the required parameters in the request body.
-
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
-
-| Parameter         | Description                                                                                                     |
-| :---------------- | :-------------------------------------------------------------------------------------------------------------- |
-| **key**           | Your API Key used for request authorization.                                                                    |
-| **init\_image**   | The first image containing a face to be swapped                                                                 |
-| **target\_image** | The second image containing a face to replace the first image                                                   |
-| **webhook**       | Set an URL to get a POST API call once the image generation is complete.                                        |
-| **track\_id**     | This ID is returned in the response to the webhook API call. This will be used to identify the webhook request. |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body
-
-```
-{  "key": "",  "init_image":"https://i.pinimg.com/564x/4c/6a/d0/4c6ad0f74a3a251344cb115699a9a7c9.jpg",  "target_image":"https://i.pinimg.com/564x/11/ac/0d/11ac0ddaf6962e395f30abc61043393e.jpg",  "webhook": null,  "track_id": null}
+## Body
+```json json
+{  
+    "key": "enterprise_api_key",  
+    "init_image":"https://i.pinimg.com/564x/4c/6a/d0/4c6ad0f74a3a251344cb115699a9a7c9.jpg",  
+    "target_image":"https://i.pinimg.com/564x/11/ac/0d/11ac0ddaf6962e395f30abc61043393e.jpg",  
+    "webhook": null,  
+    "track_id": null
+}
 ```
 
-### Request[​](#request-1 "Direct link to Request")
+## Body Attributes 
 
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
+<ParamField query="key" type="string" required>
+  Your API Key used for request authorization.
+</ParamField>
 
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({  "key": "",  "init_image":"https://i.pinimg.com/564x/4c/6a/d0/4c6ad0f74a3a251344cb115699a9a7c9.jpg",  "target_image":"https://i.pinimg.com/564x/11/ac/0d/11ac0ddaf6962e395f30abc61043393e.jpg",  "webhook": null,  "track_id": null});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/deepfake/multiple_face_swap", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
+<ParamField query="init_image" type="string" required>
+  The first image containing a face to be swapped. (URL string)
+</ParamField>
 
-```
-<?php$payload = [    "key" => "",    "init_image" =>"https://i.pinimg.com/564x/4c/6a/d0/4c6ad0f74a3a251344cb115699a9a7c9.jpg",    "target_image" => "https://i.pinimg.com/564x/11/ac/0d/11ac0ddaf6962e395f30abc61043393e.jpg",    "webhook" =>  null,    "track_id" =>  null];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/deepfake/multiple_face_swap',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
+<ParamField query="target_image" type="string" required>
+  The second image containing a face to replace the first image. (URL string)
+</ParamField>
 
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/deepfake/multiple_face_swap',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "init_image":"https://i.pinimg.com/564x/4c/6a/d0/4c6ad0f74a3a251344cb115699a9a7c9.jpg",    "target_image":"https://i.pinimg.com/564x/11/ac/0d/11ac0ddaf6962e395f30abc61043393e.jpg",    "webhook": null,    "track_id": null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
+<ParamField query="webhook" type="string">
+  Set a URL to receive a POST API call once the image generation is complete.
+</ParamField>
 
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/deepfake/multiple_face_swap"payload = json.dumps({    "key": "",    "init_image":"https://i.pinimg.com/564x/4c/6a/d0/4c6ad0f74a3a251344cb115699a9a7c9.jpg",    "target_image":"https://i.pinimg.com/564x/11/ac/0d/11ac0ddaf6962e395f30abc61043393e.jpg",    "webhook": None,    "track_id": None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
+<ParamField query="track_id" type="string">
+  This ID is returned in the response to the webhook API call. Used to identify the webhook request.
+</ParamField>
 
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\r\n    \"key\": \"\",\r\n    \"init_image\":\"https://i.pinimg.com/564x/4c/6a/d0/4c6ad0f74a3a251344cb115699a9a7c9.jpg\",\r\n    \"target_image\":\"https://i.pinimg.com/564x/11/ac/0d/11ac0ddaf6962e395f30abc61043393e.jpg\",\r\n    \"webhook\": null,\r\n    \"track_id\": null\r\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/deepfake/multiple_face_swap")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
 
-### Response[​](#response "Direct link to Response")
-
-Example Response
-
-```
-{    "status": "success",    "generationTime": 0.78,    "id": 117357076,    "output": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/a7b47266-b15c-46b1-a5ba-42172243f42a.jpg"    ],    "proxy_links": [        "https://cdn2.stablediffusionapi.com/generations/a7b47266-b15c-46b1-a5ba-42172243f42a.jpg"    ],    "meta": {        "file_prefix": "a7b47266-b15c-46b1-a5ba-42172243f42a",        "init_image": "https://i.pinimg.com/564x/4c/6a/d0/4c6ad0f74a3a251344cb115699a9a7c9.jpg",        "model_save_format": "jpg",        "seed": 2704606367,        "target_image": "https://i.pinimg.com/564x/11/ac/0d/11ac0ddaf6962e395f30abc61043393e.jpg",        "temp": "no",        "watermark": "yes",        "watermark_image": null    }}
-```
