--- a/api-guide/apis/enterprise-api/deepfake/single-video-swap.mdx
+++ b/api-guide/apis/enterprise-api/deepfake/single-video-swap.mdx
@@ -1,73 +1,52 @@
 ---
-title: "Enterprise: Single Video Swap Endpoint"
+title: "Single Video Swap"
+description: "Single Video Swap endpoint allows swapping faces in all detected faces within a single video."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
-
-Single Video Swap endpoint allows swapping faces in all detected faces within a single video.
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Make a `POST` request to below endpoint and pass the required parameters in the request body.
+```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/deepfake/single_video_swap' \
 ```
 
-Make a `POST` request to [https://modelslab.com/api/v1/enterprise/deepfake/single\_video\_swap](https://modelslab.com/api/v1/enterprise/deepfake/single_video_swap) endpoint and pass the required parameters in the request body.
-
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
-
-| Parameter          | Description                                                                                                                                                                                              | Values                     |
-| :----------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------- |
-| **key**            | Your API Key used for request authorization.                                                                                                                                                             | ExampleKey123              |
-| **init\_image**    | The image containing multiple faces to be swapped.                                                                                                                                                       | \[Image URL]               |
-| **init\_video**    | The video containing the face(s) to replace the faces in the image. Only videos less than 1 minute are accepted. If using YouTube, ensure the video is not made for kids or classified as adult content. | \[Video URL]               |
-| **output\_format** | The output formart of a video as a string e.g mp4.                                                                                                                                                       | string eg mp4              |
-| **watermark**      | Optional. If you want your generated result to have a watermark.                                                                                                                                         | true/false (Default: true) |
-| **webhook**        | Set a URL to receive a POST API call once the image generation is complete.                                                                                                                              | \[Webhook URL]             |
-| **track\_id**      | This ID is returned in the response to the webhook API call. This will be used to identify the webhook request.                                                                                          | Integer                    |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body
-
-```
-{     "key": "",    "init_image":"https://plus.unsplash.com/premium_photo-1661508557554-e3d96f2fdde5?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmVhdXRpZnVsJTIwZ2lybHxlbnwwfHwwfHx8MA%3D%3D",    "init_video":"https://tawk.link/6332cd5154f06e12d8971855/vc/66d997a6a2bc5fe2b627a250/v/4239c555189b772d5ca1bd5aa4bf872c4c12a07e/sdfsdfsdf.mp4",    "output_format":"mp4",    "webhook":null,    "track_id": null}
+## Body
+```json json
+{     
+    "key": "enterprise_api_key",    
+    "init_image":"https://plus.unsplash.com/premium_photo-1661508557554-e3d96f2fdde5?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmVhdXRpZnVsJTIwZ2lybHxlbnwwfHwwfHx8MA%3D%3D",    
+    "init_video":"https://tawk.link/6332cd5154f06e12d8971855/vc/66d997a6a2bc5fe2b627a250/v/4239c555189b772d5ca1bd5aa4bf872c4c12a07e/sdfsdfsdf.mp4",    
+    "output_format":"mp4",    
+    "webhook":null,    
+    "track_id": null
+}
 ```
 
-### Request[​](#request-1 "Direct link to Request")
+## Body Attributes
 
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
+<ParamField query="key" type="string" required>
+  Your API Key used for request authorization.
+</ParamField>
 
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({    "key": "",    "init_image":"https://plus.unsplash.com/premium_photo-1661508557554-e3d96f2fdde5?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmVhdXRpZnVsJTIwZ2lybHxlbnwwfHwwfHx8MA%3D%3D",    "init_video":"https://tawk.link/6332cd5154f06e12d8971855/vc/66d997a6a2bc5fe2b627a250/v/4239c555189b772d5ca1bd5aa4bf872c4c12a07e/sdfsdfsdf.mp4",    "output_format":"mp4",    "webhook":null,    "track_id": null});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/deepfake/single_video_swap", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
+<ParamField query="init_image" type="string" required>
+  The image containing multiple faces to be swapped. (URL string)
+</ParamField>
 
-```
-<?php$payload = [    "key" => "",    "init_image" =>"https://plus.unsplash.com/premium_photo-1661508557554-e3d96f2fdde5?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmVhdXRpZnVsJTIwZ2lybHxlbnwwfHwwfHx8MA%3D%3D",    "init_video" => "https://tawk.link/6332cd5154f06e12d8971855/vc/66d997a6a2bc5fe2b627a250/v/4239c555189b772d5ca1bd5aa4bf872c4c12a07e/sdfsdfsdf.mp4",    "output_format" => "mp4",    "webhook" => null,    "track_id" => null];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/deepfake/single_video_swap',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
+<ParamField query="init_video" type="string" required>
+  The video containing the face(s) to replace the faces in the image. Only videos less than 1 minute are accepted. If using YouTube, ensure the video is not made for kids or classified as adult content. (URL string)
+</ParamField>
 
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/deepfake/single_video_swap',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "init_image":"https://plus.unsplash.com/premium_photo-1661508557554-e3d96f2fdde5?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmVhdXRpZnVsJTIwZ2lybHxlbnwwfHwwfHx8MA%3D%3D",    "init_video":"https://tawk.link/6332cd5154f06e12d8971855/vc/66d997a6a2bc5fe2b627a250/v/4239c555189b772d5ca1bd5aa4bf872c4c12a07e/sdfsdfsdf.mp4",    "output_format":"mp4",    "webhook":null,    "track_id": null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
+<ParamField query="output_format" type="string" default="mp4">
+  The output format of the video. Available options: `mp4`
+</ParamField>
 
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/deepfake/single_video_swap"payload = json.dumps({   "key": "",    "init_image":"https://plus.unsplash.com/premium_photo-1661508557554-e3d96f2fdde5?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmVhdXRpZnVsJTIwZ2lybHxlbnwwfHwwfHx8MA%3D%3D",    "init_video":"https://tawk.link/6332cd5154f06e12d8971855/vc/66d997a6a2bc5fe2b627a250/v/4239c555189b772d5ca1bd5aa4bf872c4c12a07e/sdfsdfsdf.mp4",    "output_format":"mp4",    "webhook":NOne,    "track_id": None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
+<ParamField query="watermark" type="bool" default="true">
+  Whether the generated result should have a watermark. Available options: `true`, `false`
+</ParamField>
 
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\r\n    \"key\": \" \",\r\n    \"init_image\":\"https://plus.unsplash.com/premium_photo-1661508557554-e3d96f2fdde5?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmVhdXRpZnVsJTIwZ2lybHxlbnwwfHwwfHx8MA%3D%3D\",\r\n    \"init_video\":\"https://tawk.link/6332cd5154f06e12d8971855/vc/66d997a6a2bc5fe2b627a250/v/4239c555189b772d5ca1bd5aa4bf872c4c12a07e/sdfsdfsdf.mp4\",\r\n \"output_format\":mp4,\r\n   \"webhook\":null,\r\n    \"track_id\": null\r\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/deepfake/single_video_swap")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
+<ParamField query="webhook" type="string">
+  Set a URL to receive a POST API call once the image generation is complete.
+</ParamField>
 
-### Response[​](#response "Direct link to Response")
-
-Example Response
-
-```
-{    "status": "success",    "generationTime": 10.1,    "id": 278,    "output": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/e9b7ee18-2c7d-4268-ac40-fe1d1d4e503a.mp4"    ],    "proxy_links": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/e9b7ee18-2c7d-4268-ac40-fe1d1d4e503a.mp4"    ],    "meta": {        "seed": 286642771,        "source_image": "https://plus.unsplash.com/premium_photo-1661508557554-e3d96f2fdde5?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmVhdXRpZnVsJTIwZ2lybHxlbnwwfHwwfHx8MA%3D%3D",        "target_video_url": "https://tawk.link/6332cd5154f06e12d8971855/vc/66d997a6a2bc5fe2b627a250/v/4239c555189b772d5ca1bd5aa4bf872c4c12a07e/sdfsdfsdf.mp4",        "output_format": "mp4",        "outdir": "out/",        "file_prefix": "e9b7ee18-2c7d-4268-ac40-fe1d1d4e503a",        "watermark": "yes",        "watermark_image": null    },    "future_links": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/e9b7ee18-2c7d-4268-ac40-fe1d1d4e503a.mp4"    ]}
-```
+<ParamField query="track_id" type="string">
+  This ID is returned in the response to the webhook API call. Used to identify the webhook request.
+</ParamField>
