ep deepfake api

--- a/api-guide/apis/enterprise-api/3d-api/image-to-3d.mdx
+++ b/api-guide/apis/enterprise-api/3d-api/image-to-3d.mdx
@@ -16,7 +16,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ## Body
 ```json json
 {   
-  "key": "",    
+  "key": "enterprise_api_key",    
   "image": "https://i.pinimg.com/736x/7c/83/64/7c83645c903677dd93ef50fe953dceea.jpg",    
   "ss_sampling_steps" : 50,    
   "slat_sampling_steps" : 50,    
