--- a/api-guide/apis/enterprise-api/deepseek-chat/overview.mdx
+++ b/api-guide/apis/enterprise-api/deepseek-chat/overview.mdx
@@ -1,25 +1,18 @@
 ---
 title: "Enterprise: Deepseek Uncensored Chat API"
+description: Collection of endpoints to start uncensored AI conversations."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+<CardGroup>
+  <Card title="Deepseek Uncensored Chat" href="/enterprise-api/deepseek-chat/start">
+    This endpoint allows you to start an uncensored chat conversation.
+  </Card>
 
-This endpoint allows you to start uncensored chat conversation
+  <Card title="Clear Server Cache" href="/enterprise-api/deepseek-chat/clear-cache">
+    This endpoint clears the server cache.
+  </Card>
 
-* [start](/enterprise-api/deepseek-chat/start)
-* [clear cache](/enterprise-api/deepseek-chat/clear-cache)
-* [restart server](/enterprise-api/deepseek-chat/restart-server)
-
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
-
-### Start Deepseek Uncensored Chat[​](#start-deepseek-uncensored-chat "Direct link to Start Deepseek Uncensored Chat")
-
-This endpoint allows you to start uncensored chat
-
-### Clear Server Cache Endpoint[​](#clear-server-cache-endpoint "Direct link to Clear Server Cache Endpoint")
-
-This endpoint clear server cache
-
-### Restart Server Endpoint[​](#restart-server-endpoint "Direct link to Restart Server Endpoint")
-
-This endpoint restart the server
+  <Card title="Restart Server" href="/enterprise-api/deepseek-chat/restart-server">
+    This endpoint restarts the server.
+  </Card>
+</CardGroup>
