--- a/api-guide/apis/enterprise-api/deepseek-chat/overview.mdx
+++ b/api-guide/apis/enterprise-api/deepseek-chat/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise: Deepseek Uncensored Chat API"
-description: Collection of endpoints to start uncensored AI conversations."
+title: "Overview"
+description: "Collection of endpoints to start uncensored AI conversations."
 ---
 
 <CardGroup>
