--- a/api-guide/apis/enterprise-api/overview.mdx
+++ b/api-guide/apis/enterprise-api/overview.mdx
@@ -1,41 +1,76 @@
 ---
-title: "Guides"
+title: "Enterprise"
+description: "Collection of All Enterprise APIs offfered by Modelslab."
 ---
 
-### Quickstart
-
-Learn how to integrate and use enterprise API
+## Categories
 
 <CardGroup>
-  <Card title="Enterprise General EndpointThese are endpoints that are general to all server type" href="/enterprise-api/general/overview" />
+  <Card title="Enterprise General Endpoint" href="/enterprise-api/general/overview">
+    These are endpoints that are general to all server types.
+  </Card>
 
-  <Card title="Enterprise Text to ImageThis endpoint is used to create an image from a text prompt based on trained or on public models." href="/enterprise-api/text-to-image/overview" />
+  <Card title="Enterprise Text to Image" href="/enterprise-api/text-to-image/overview">
+    This endpoint is used to create an image from a text prompt based on trained or public models.
+  </Card>
 
-  <Card title="Enterprise Image EditingThe image editing suites brings you some exclusive API endpoints with few default essential endpoints." href="/enterprise-api/image-editing/overview" />
+  <Card title="Enterprise Image Editing" href="/enterprise-api/image-editing/overview">
+    The image editing suite offers exclusive API endpoints with essential features.
+  </Card>
 
-  <Card title="Enterprise Realtime APIGenerate image in few seconds." href="/enterprise-api/realtime/overview" />
+  <Card title="Enterprise Realtime API" href="/enterprise-api/realtime/overview">
+    Generate images in just a few seconds.
+  </Card>
 
-  <Card title="Enterprise Voice CloningCreate audio experience with our versatile voice synthesis and audio processing with our audio generator API" href="/enterprise-api/voice-cloning/overview" />
+  <Card title="Enterprise Voice Cloning" href="/enterprise-api/voice-cloning/overview">
+    Create audio experiences with versatile voice synthesis and audio processing.
+  </Card>
 
-  <Card title="Enterprise VideoCreate video from a text prompt based on trained or on public models." href="/enterprise-api/video/overview" />
+  <Card title="Enterprise Video" href="/enterprise-api/video/overview">
+    Create video from a text prompt based on trained or public models.
+  </Card>
 
-  <Card title="Enterprise Deepfake APICreate engaging marketing materials, training videos, our Deepfake Maker offers unmatched precision and quality" href="/enterprise-api/deepfake/overview" />
+  <Card title="Enterprise Deepfake API" href="/enterprise-api/deepfake/overview">
+    Create engaging marketing materials or training videos with unmatched precision and quality.
+  </Card>
 
-  <Card title="Enterprise 3D APIGenerate 3D object from text and image." href="/enterprise-api/3d-api/overview" />
+  <Card title="Enterprise 3D API" href="/enterprise-api/3d-api/overview">
+    Generate 3D objects from text and image.
+  </Card>
 
-  <Card title="Enterprise Face Gen RealtimeGenerate faces in the fastest time" href="/enterprise-api/face-gen/overview" />
+  <Card title="Enterprise Face Gen Realtime" href="/enterprise-api/face-gen/overview">
+    Generate faces in the fastest time.
+  </Card>
 
-  <Card title="Enterprise Interior APIGenerate stuning interior design from an image." href="/enterprise-api/interior/overview" />
+  <Card title="Enterprise Interior API" href="/enterprise-api/interior/overview">
+    Generate stunning interior designs from an image.
+  </Card>
 
-  <Card title="Enterprise Flux Realtime APIGenerate faces in the fastest time" href="/enterprise-api/flux/overview" />
+  <Card title="Enterprise Flux Realtime API" href="/enterprise-api/flux/overview">
+    Generate faces with real-time performance.
+  </Card>
 
-  <Card title="Enterprise Uncensored ChatUncensored chat for enterprise" href="/enterprise-api/uncensored-chat/overview" />
+  <Card title="Enterprise Uncensored Chat" href="/enterprise-api/uncensored-chat/overview">
+    Uncensored chat for enterprise use.
+  </Card>
 
-  <Card title="Enterprise Ultra Super ResolutionGenerate images with very hight resolution" href="/enterprise-api/super-resolution/overview" />
+  <Card title="Enterprise Ultra Super Resolution" href="/enterprise-api/super-resolution/overview">
+    Generate images with very high resolution.
+  </Card>
 
-  <Card title="Enterprise Flux FacegenGenerate images with very hight resolution" href="/enterprise-api/flux-headshot/overview" />
+  <Card title="Enterprise Flux Facegen" href="/enterprise-api/flux-headshot/overview">
+    Generate high-resolution face images.
+  </Card>
 
-  <Card title="Enterprise Deepseek Uncensored ChatDeepseek uncensored chat for enterprise" href="/enterprise-api/deepseek-chat/overview" />
+  <Card title="Enterprise Deepseek Uncensored Chat" href="/enterprise-api/deepseek-chat/overview">
+    Deepseek uncensored chat for enterprise.
+  </Card>
 
-  <Card title="Enterprise Image to Video UltraCreate ultra realistic video from a image prompt" href="/enterprise-api/image-to-video-ultra/overview" />
+  <Card title="Enterprise Image to Video Ultra" href="/enterprise-api/image-to-video-ultra/overview">
+    Create ultra-realistic videos from an image prompt.
+  </Card>
+
+  <Card title="Enterprise Ultra Video" href="/enterprise-api/ultra-video/overview">
+    Generate ultra high-quality video from text or image input.
+  </Card>
 </CardGroup>
