flux and facegen ep

--- a/api-guide/apis/enterprise-api/deepfake/overview.mdx
+++ b/api-guide/apis/enterprise-api/deepfake/overview.mdx
@@ -3,6 +3,11 @@ title: "Overview"
 description: "The Deepfake Endpoints bring a collection of interesting endpoints that allow you to generate interactive videos and images."
 ---
 
+<Tip>
+    Not on Enterprise yet? Get your enterprise plan at [ModelsLab](https://modelslab.com/enterprise)
+</Tip>
+
+
 ## Endpoints
 
 <CardGroup>
