--- a/api-guide/apis/enterprise-api/face-gen/overview.mdx
+++ b/api-guide/apis/enterprise-api/face-gen/overview.mdx
@@ -1,27 +1,41 @@
 ---
-title: "Enterprise: Face Gen API"
+title: "Overview"
+description: "This endpoint allows you to generate faces in the fastest time."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+<Tip>
+    Not on Enterprise yet? Get your enterprise plan at [ModelsLab](https://modelslab.com/enterprise)
+</Tip>
 
-This endpoint allows you to generate faces in the fastest time
 
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
+## Available Endpoints
 
-### FaceGen[​](#facegen "Direct link to FaceGen")
+<CardGroup>
+  <Card title="FaceGen" href="/enterprise-api/face-gen/facegen">
+    This endpoint allows you to generate an image with the face image provided.
+  </Card>
 
-This endpoint allows you to generate image with the face image provided
+  <Card title="Clear Server Cache" href="/enterprise-api/face-gen/clear-cache">
+    This endpoint clears the server cache.
+  </Card>
 
-![Face gen endpoint result](\images\enterprise-api\face-gen\assets\images\Face-Gen-90cdf5a0be5cc4e52b36cfcc87d9fb29.jpg)
+  <Card title="Clear Server Queue" href="/enterprise-api/face-gen/clear-queue">
+    This endpoint clears the server queue.
+  </Card>
 
-### Clear Server Cache Endpoint[​](#clear-server-cache-endpoint "Direct link to Clear Server Cache Endpoint")
+  <Card title="Restart Server" href="/enterprise-api/face-gen/restart-server">
+    This endpoint restarts the server.
+  </Card>
 
-This endpoint clear server cache
+  <Card title="System Details" href="/enterprise-api/face-gen/system-details">
+    This endpoint checks for server details.
+  </Card>
 
-### Restart Server Endpoint[​](#restart-server-endpoint "Direct link to Restart Server Endpoint")
+  <Card title="Update Server" href="/enterprise-api/face-gen/update-server">
+    This endpoint updates the server to the latest version.
+  </Card>
 
-This endpoint restart the server
-
-### System Details Endpoint[​](#system-details-endpoint "Direct link to System Details Endpoint")
-
-This endpoint checks for server details
+  <Card title="Fetch Request" href="/enterprise-api/face-gen/fetch">
+    This endpoint fetches queued or processing requests.
+  </Card>
+</CardGroup>
