--- a/api-guide/apis/enterprise-api/face-gen/make-gen.mdx
+++ b/api-guide/apis/enterprise-api/face-gen/make-gen.mdx
@@ -1,87 +1,100 @@
 ---
-title: "Enterprise: Face Generator Endpoint"
+title: "Face Generator"
+description: "This endpoint allows you to generate image with the face image provided."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
 
-This endpoint allows you to generate image with the face image provided
-
-![Face gen endpoint result](\images\enterprise-api\face-gen\assets\images\Face-Gen-90cdf5a0be5cc4e52b36cfcc87d9fb29.jpg)
+![Face gen endpoint result](/images/enterprise-api/face-gen/assets/images/Face-Gen-90cdf5a0be5cc4e52b36cfcc87d9fb29.jpg)
 
 <Warning>
   Make sure you add your [s3 details](/enterprise-api/general/update-s3-details) for `face_gen` server, so you can receive image generated in your bucket. Images generated without s3 details being added will be delete after **24hours**
 </Warning>
 
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Make a `POST` request to below endpoint and pass the required parameters as a request body to the endpoint.
+```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/face_gen/make_gen' \
 ```
 
-Make a `POST` request to [https://modelslab.com/api/v1/enterprise/face\_gen/make\_gen](https://modelslab.com/api/v1/enterprise/face_gen/make_gen) endpoint and pass the required parameters as a request body to the endpoint.
-
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
-
-| Parameter                 | Description                                                                                                                                                     |
-| :------------------------ | :-------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **key**                   | Required. Your API Key used for request authorization                                                                                                           |
-| **prompt**                | Required. Text prompt with description of the things you want in the image to be generated.                                                                     |
-| **face\_image**           | Required. Link or valid base64 data which follows `data:image/jpeg;base64,{your_base64_string}` to the image of the face you want your generations to resemble. |
-| **safety\_checker**       | Required. Whether to run the safety checker to prevent NSFW image generation. One of true or false.                                                             |
-| **safety\_checker\_type** | Required. Modify image if NSFW images are found; **default**: sensitive\_content\_text, **options**: `blur`,`sensitive_content_text`, `pixelate`, `black`       |
-| **width**                 | Width of your generated image. Max dimension: 512 x 768                                                                                                         |
-| **height**                | Height of your generated image. Max dimension: 512 x 768                                                                                                        |
-| **num\_inference\_steps** | Number of denoising steps. Value accepted are 21,31 or 41                                                                                                       |
-| **guidance\_scale**       | Scale for classifier-free guidance.                                                                                                                             |
-| **s\_scale**              | Required. Adjust the weight of the face structure \[float]\[0.0 to 2.0] \[default 1.0].                                                                         |
-| **seed**                  | Required. Seed is used to reproduce results, same seed will give you same image in return again.                                                                |
-| **samples**               | Number of images to be returned in response. The maximum value is 2.                                                                                            |
-| **base64**                | If provided face\_image is in base64 format or if you want your generated images as a base64 string, must be set to `true`. Default: `false`.                   |
-| **webhook**               | Set an URL to get a POST API call once the image generation is complete.                                                                                        |
-| **track\_id**             | This ID is returned in the response to the webhook API call. This will be used to identify the webhook request.                                                 |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body
-
+## Body
+```json json
+{  
+  "key": "enterprise_api_key",  
+  "prompt": "pretty woman",  
+  "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",  
+  "face_image":"https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",  
+  "width": "512",  
+  "height": "512",  
+  "samples": "1",  
+  "num_inference_steps": "21",  
+  "safety_checker": false,  
+  "s_scale":1.0,  
+  "seed":1234,  
+  "safety_checker_type":"blur",  
+  "base64": false,  
+  "guidance_scale": 7.5,  
+  "webhook": null,  
+  "track_id": null
+}
 ```
-{  "key": "",  "prompt": "pretty woman",  "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",  "face_image":"https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",  "width": "512",  "height": "512",  "samples": "1",  "num_inference_steps": "21",  "safety_checker": false,  "s_scale":1.0,  "seed":1234,  "safety_checker_type":"blur",  "base64": false,  "guidance_scale": 7.5,  "webhook": null,  "track_id": null}
-```
+## Body Attributes
 
-### Request[​](#request-1 "Direct link to Request")
+<ParamField query="key" type="string" required placeholder="Your API key">
+  Your API Key used for request authorization.
+</ParamField>
 
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
+<ParamField query="prompt" type="string" required placeholder="Prompt text">
+  Text prompt with description of the things you want in the image to be generated.
+</ParamField>
 
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({    "key": "",    "prompt": "pretty woman",    "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",    "face_image":"https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",    "width": "512",    "height": "512",    "samples": "1",    "num_inference_steps": "21",    "safety_checker": false,    "s_scale":1.0,    "seed":1234,    "safety_checker_type":"blur",    "base64": false,    "guidance_scale": 7.5,    "webhook": null,    "track_id": null  });var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/face_gen/make_gen", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
+<ParamField query="face_image" type="string" required placeholder="Image URL or base64 data">
+  Link or valid base64 data (data:image/jpeg;base64,{your_base64_string}) of the face you want generations to resemble.
+</ParamField>
 
-```
-<?php$payload = [    "key" => "",    "prompt" => "pretty woman",    "negative_prompt" => "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",    "face_image" => "https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",    "width" => "512",    "height" =>  "512",    "samples" => "1",    "num_inference_steps" => "21",    "safety_checker" => false,    "base64" => false,    "seed" => 12345,    "s_scale":1.0,    "guidance_scale": 7.5,    "webhook" => null,    "track_id" => null ];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/face_gen/make_gen',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
+<ParamField query="safety_checker" type="bool" required>
+  Whether to run the safety checker to prevent NSFW image generation.
+</ParamField>
 
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/face_gen/make_gen',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "prompt": "pretty woman",    "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",    "face_image":"https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",    "width": "512",    "height": "512",    "samples": "1",    "num_inference_steps": "21",    "safety_checker": false,    "base64": false,    "seed": null,    "guidance_scale": 7.5,    "webhook": null,    "track_id": null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
+<ParamField query="safety_checker_type" type="string" default="sensitive_content_text" enum="blur,sensitive_content_text,pixelate,black">
+  Modify image if NSFW images are found. Options: blur, sensitive_content_text, pixelate, black.
+</ParamField>
 
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/face_gen/make_gen"payload = json.dumps({   "key": "",  "prompt": "pretty woman",  "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",  "face_image":"https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",  "width": "512",  "height": "512",  "samples": "1",  "num_inference_steps": "21",  "safety_checker": False,  "base64": False,  "seed": None,  "guidance_scale": 7.5,  "webhook": None,  "track_id": None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
+<ParamField query="width" type="number">
+  Width of your generated image. Max dimension: 512 x 768.
+</ParamField>
 
-```
-   OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n  \"key\": \"\",\n  \"prompt\": \"pretty woman\",\n  \"negative_prompt\": \"anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry\",\n  \"face_image\":\"https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg\",\n  \"width\": \"512\",\n  \"height\": \"512\",\n  \"samples\": \"1\",\n  \"num_inference_steps\": \"21\",\n  \"safety_checker\": false,\n  \"base64\": false,\n  \"seed\": null,\n  \"guidance_scale\": 7.5,\n  \"webhook\": null,\n  \"track_id\": null\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/face_gen/make_gen")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
+<ParamField query="height" type="number">
+  Height of your generated image. Max dimension: 512 x 768.
+</ParamField>
 
-### Response[​](#response "Direct link to Response")
+<ParamField query="num_inference_steps" type="number" enum="21,31,41">
+  Number of denoising steps. Accepted values: 21, 31, 41.
+</ParamField>
 
-Example Response
+<ParamField query="guidance_scale" type="number">
+  Scale for classifier-free guidance.
+</ParamField>
 
-```
-{    "status": "success",    "generationTime": 7.358475685119629,    "id": 32,    "output": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/temp/8c3ef6ea-1c44-4d69-91cb-fc11971a65d1-0.png"    ],    "proxy_links": [        "https://cdn2.stablediffusionapi.com/temp/8c3ef6ea-1c44-4d69-91cb-fc11971a65d1-0.png"    ],    "meta": {        "base64": "no",        "face_image": "https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",        "file_prefix": "8c3ef6ea-1c44-4d69-91cb-fc11971a65d1",        "guidance_scale": 7.5,        "height": 512,        "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",        "num_inference_steps": 21,        "outdir": "out",        "prompt": "pretty woman",        "safety_checker": "no",        "safety_checker_type": "blur",        "samples": 1,        "seed": 4029484891,        "temp": "yes",        "width": 512    }}
-```
+<ParamField query="s_scale" type="number" required default="1.0" min="0.0" max="2.0">
+  Adjust the weight of the face structure. Range: 0.0 to 2.0.
+</ParamField>
+
+<ParamField query="seed" type="number" required>
+  Seed used to reproduce results. Same seed will generate the same image again.
+</ParamField>
+
+<ParamField query="samples" type="number" default="1" max="2">
+  Number of images to be returned in response. Max: 2.
+</ParamField>
+
+<ParamField query="base64" type="bool" default="false">
+  If true, face_image is in base64 format or output images will be returned as base64 strings.
+</ParamField>
+
+<ParamField query="webhook" type="string">
+  URL to receive a POST call once image generation is complete.
+</ParamField>
+
+<ParamField query="track_id" type="string">
+  ID returned in the webhook API call to identify the request.
+</ParamField>
