--- a/api-guide/apis/enterprise-api/flux/img2img.mdx
+++ b/api-guide/apis/enterprise-api/flux/img2img.mdx
@@ -1,86 +1,90 @@
 ---
-title: "Enterprise Flux: Image to Image Endpoint"
+title: "Image to Image"
+description: "The Image2Image API generates an image from an image."
 ---
-
-## Overview[​](#overview "Direct link to Overview")
-
-The Image2Image API generates an image from an image. Pass the appropriate request parameters to the endpoint to generate image from an image.
-
-This endpoint generates and returns an image from an image passed with its URL in the request.
 
 <Warning>
   Make sure you add your [s3 details](/enterprise-api/general/update-s3-details) for `flux` server, so you can receive image generated in your bucket. Images generated without s3 details being added will be delete after **24hours**
 </Warning>
 
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Make a `POST` request to below endpoint and pass the required parameters as a request body to the endpoint.
+```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/flux/img2img' \
 ```
-
-Make a `POST` request to [https://modelslab.com/api/v1/enterprise/flux/img2img](https://modelslab.com/api/v1/enterprise/flux/img2img) endpoint and pass the required parameters as a request body to the endpoint.
-
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
-
-| Parameter             | Description                                                                                                                                          |
-| :-------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **key**               | Your API Key used for request authorization                                                                                                          |
-| **prompt**            | Text prompt with description of the things you want in the image to be generated                                                                     |
-| **negative\_prompt**  | Items you don't want in the image                                                                                                                    |
-| **init\_image**       | Link to the Initial Image                                                                                                                            |
-| **width**             | Max Height: Width: 1024x1024                                                                                                                         |
-| **height**            | Max Height: Width: 1024x1024                                                                                                                         |
-| **samples**           | Number of images to be returned in response. The maximum value is 4.                                                                                 |
-| **safety\_checker**   | A checker for NSFW images. If such an image is detected, it will be replaced by a blank image.                                                       |
-| **base64**            | Get response as base64 string, **default**: `false`, **options**: `true` or `false`                                                                  |
-| **strength**          | Prompt strength when using **init** image. 1.0 corresponds to full destruction of information in the init image.                                     |
-| **instant\_response** | queue response instantly before processing finishes instead of waiting a minimum amount of time **default**: `false`, **options**: `true` or `false` |
-| **seed**              | Seed is used to reproduce results, same seed will give you same image in return again. Pass *null* for a random number.                              |
-| **webhook**           | Set an URL to get a POST API call once the image generation is complete.                                                                             |
-| **track\_id**         | This ID is returned in the response to the webhook API call. This will be used to identify the webhook request.                                      |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body
-
-```
-{        "key": "",    "prompt": "a cat sitting on a bench",    "negative_prompt": "bad quality",    "init_image": "https://raw.githubusercontent.com/CompVis/stable-diffusion/main/data/inpainting_examples/overture-creations-5sI6fQgYIuo.png",    "width": "512",    "height": "512",    "samples": "1",    "temp": false,    "safety_checker": false,    "strength":0.7,    "seed": null,    "webhook": null,    "track_id": null}
+## Body
+```json json
+{        
+    "key": "enterprise_api_key",    
+    "prompt": "a cat sitting on a bench",    
+    "negative_prompt": "bad quality",    
+    "init_image": "https://raw.githubusercontent.com/CompVis/stable-diffusion/main/data/inpainting_examples/overture-creations-5sI6fQgYIuo.png",    
+    "width": "512",    
+    "height": "512",    
+    "samples": "1",    
+    "temp": false,    
+    "safety_checker": false,    
+    "strength":0.7,    
+    "seed": null,    
+    "webhook": null,    
+    "track_id": null
+  }
 ```
 
-### Request[​](#request-1 "Direct link to Request")
+## Body Attributes
 
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
+<ParamField query="key" type="string" required placeholder="Your API key">
+  Your API Key used for request authorization.
+</ParamField>
 
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({    "key": "",    "prompt": "a cat sitting on a bench",    "negative_prompt": "bad quality",    "init_image": "https://raw.githubusercontent.com/CompVis/stable-diffusion/main/data/inpainting_examples/overture-creations-5sI6fQgYIuo.png",    "width": "512",    "height": "512",    "samples": "1",    "temp": false,    "safety_checker": false,    "strength":0.7,    "seed": null,    "webhook": null,    "track_id": null});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/flux/img2img", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
+<ParamField query="prompt" type="string" required placeholder="Text prompt">
+  Text prompt with description of the things you want in the image to be generated.
+</ParamField>
 
-```
-<?php$payload = [     "key" =>  "",    "prompt" => "a cat sitting on a bench",    "negative_prompt" => "bad quality",    "init_image" => "https://raw.githubusercontent.com/CompVis/stable-diffusion/main/data/inpainting_examples/overture-creations-5sI6fQgYIuo.png",    "width" => "512",    "height" => "512",    "samples" => "1",    "temp" => false,    "safety_checker" => false,    "strength" => 0.7,    "seed" => null,    "webhook" =>  null,    "track_id" => null];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/flux/img2img',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
+<ParamField query="negative_prompt" type="string" placeholder="Items to avoid">
+  Items you don't want in the image.
+</ParamField>
 
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/flux/img2img',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "prompt": "a cat sitting on a bench",    "negative_prompt": "bad quality",    "init_image": "https://raw.githubusercontent.com/CompVis/stable-diffusion/main/data/inpainting_examples/overture-creations-5sI6fQgYIuo.png",    "width": "512",    "height": "512",    "samples": "1",    "temp": false,    "safety_checker": false,    "strength":0.7,    "seed": null,    "webhook": null,    "track_id": null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
+<ParamField query="init_image" type="string" placeholder="Image URL">
+  Link to the Initial Image.
+</ParamField>
 
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/flux/img2img"payload = json.dumps({   "key": "",    "prompt": "a cat sitting on a bench",    "negative_prompt": "bad quality",    "init_image": "https://raw.githubusercontent.com/CompVis/stable-diffusion/main/data/inpainting_examples/overture-creations-5sI6fQgYIuo.png",    "width": "512",    "height": "512",    "samples": "1",    "temp": False,    "safety_checker": False,    "strength":0.7,    "seed": None,    "webhook": None,    "track_id": None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
+<ParamField query="width" type="number" placeholder="Width in px">
+  Max Height: Width: 1024x1024.
+</ParamField>
 
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\": \"\",\n    \"prompt\": \"a cat sitting on a bench\",\n    \"negative_prompt\": \"bad quality\",\n    \"init_image\": \"https://raw.githubusercontent.com/CompVis/stable-diffusion/main/data/inpainting_examples/overture-creations-5sI6fQgYIuo.png\",\n    \"width\": \"512\",\n    \"height\": \"512\",\n    \"samples\": \"1\",\n    \"temp\": false,\n    \"safety_checker\": false,\n    \"strength\":0.7,\n    \"seed\": null,\n    \"webhook\": null,\n    \"track_id\": null\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/flux/img2img")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
+<ParamField query="height" type="number" placeholder="Height in px">
+  Max Height: Width: 1024x1024.
+</ParamField>
 
-### Response[​](#response "Direct link to Response")
+<ParamField query="samples" type="number" placeholder="1-4">
+  Number of images to be returned in response. The maximum value is 4.
+</ParamField>
 
-Example Response
+<ParamField query="safety_checker" type="boolean">
+  A checker for NSFW images. If such an image is detected, it will be replaced by a blank image.
+</ParamField>
 
-```
-{    "status": "success",    "warning": "",    "id": null,    "generationTime": 8.17,    "output": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/2ac32c06-17a9-418d-b8f9-d76d32774585-0.png"    ],    "proxy_links": [        "https://cdn2.stablediffusionapi.com/generations/2ac32c06-17a9-418d-b8f9-d76d32774585-0.png"    ],    "nsfw_content_detected": false,    "webhook_status": "",    "meta": {        "base64": "no",        "clip_skip": null,        "file_prefix": "2ac32c06-17a9-418d-b8f9-d76d32774585",        "guidance_scale": 3.5,        "height": 512,        "init_image": "https://raw.githubusercontent.com/CompVis/stable-diffusion/main/data/inpainting_examples/overture-creations-5sI6fQgYIuo.png",        "instant_response": "no",        "model_id": "flux",        "n_samples": 1,        "negative_prompt": "bad quality",        "num_inference_steps": 10,        "opacity": 0.8,        "padding_down": 10,        "padding_right": 10,        "prompt": "a cat sitting on a bench",        "rescale": "yes",        "safety_checker": "no",        "safety_checker_type": "black",        "scale_down": 6,        "seed": 3851153854,        "strength": 0.7,        "temp": "no",        "watermark": "no",        "width": 512    }}
-```
+<ParamField query="base64" type="boolean" default="false">
+  Get response as base64 string, <strong>default</strong>: <code>false</code>, <strong>options</strong>: <code>true</code> or <code>false</code>.
+</ParamField>
+
+<ParamField query="strength" type="number" placeholder="0.0-1.0">
+  Prompt strength when using <strong>init</strong> image. 1.0 corresponds to full destruction of information in the init image.
+</ParamField>
+
+<ParamField query="instant_response" type="boolean" default="false">
+  Queue response instantly before processing finishes instead of waiting a minimum amount of time <strong>default</strong>: <code>false</code>, <strong>options</strong>: <code>true</code> or <code>false</code>.
+</ParamField>
+
+<ParamField query="seed" type="number" placeholder="Seed number or null">
+  Seed is used to reproduce results, same seed will give you same image in return again. Pass <em>null</em> for a random number.
+</ParamField>
+
+<ParamField query="webhook" type="string" placeholder="Webhook URL">
+  Set an URL to get a POST API call once the image generation is complete.
+</ParamField>
+
+<ParamField query="track_id" type="string" placeholder="Track ID">
+  This ID is returned in the response to the webhook API call. This will be used to identify the webhook request.
+</ParamField>
