headhsot and geenral ep

--- a/api-guide/apis/enterprise-api/flux-headshot/fetch.mdx
+++ b/api-guide/apis/enterprise-api/flux-headshot/fetch.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Enterprise: Fetch Queued Images Endpoint"
+description: "Fetch Queued response."
+openapi: "POST /flux_headshot/fetch/{id}"
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
