--- a/api-guide/apis/enterprise-api/flux-headshot/make-gen.mdx
+++ b/api-guide/apis/enterprise-api/flux-headshot/make-gen.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Enterprise: Flux Head Shot Endpoint"
+description: "This endpoint allows you to generate head shot with flux capabilities."
+openapi: "POST /flux_headshot/make_gen"
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
