--- a/api-guide/apis/enterprise-api/flux-headshot/overview.mdx
+++ b/api-guide/apis/enterprise-api/flux-headshot/overview.mdx
@@ -1,27 +1,31 @@
 ---
-title: "Enterprise: Flux Head Shot API"
+title: "Flux Head Shot"
+description: "This endpoint allows you to generate head shot with flux capabilities."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
 
-Flux face gen allows you to generate images with the face image provided with flux capabilities
-
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
-
-### FaceGen[​](#facegen "Direct link to FaceGen")
-
-This endpoint allows you to generate image with the face image provided
-
-![Face gen endpoint result](\images\enterprise-api\flux-headshot\assets\images\Face-Gen-90cdf5a0be5cc4e52b36cfcc87d9fb29.jpg)
-
-### Clear Server Cache Endpoint[​](#clear-server-cache-endpoint "Direct link to Clear Server Cache Endpoint")
-
-This endpoint clear server cache
-
-### Restart Server Endpoint[​](#restart-server-endpoint "Direct link to Restart Server Endpoint")
-
-This endpoint restart the server
-
-### System Details Endpoint[​](#system-details-endpoint "Direct link to System Details Endpoint")
-
-This endpoint checks for server details
+### Endpoints
+<CardGroup>
+        <Card title="FaceGen" href="/enterprise-api/flux-headshot/make-gen">
+            This endpoint allows you to generate image with the face image provided
+        </Card>
+        <Card title="Clear Cache" href="/enterprise-api/flux-headshot/clear-cache">
+            This endpoint clears the server cache.
+        </Card>
+        <Card title="Clear Queue" href="/enterprise-api/flux-headshot/clear-queue">
+            This endpoint clears the server queue.
+        </Card>
+        <Card title="Restart Server" href="/enterprise-api/flux-headshot/restart-server">
+            This endpoint restarts the server.
+        </Card>
+        <Card title="System Details" href="/enterprise-api/flux-headshot/system-details">
+            This endpoint checks for server details.
+        </Card>
+        <Card title="Update Server" href="/enterprise-api/flux-headshot/update-server">
+            This endpoint updates the server to the latest version.
+        </Card>
+        <Card title="Fetch Request" href="/enterprise-api/flux-headshot/fetch">
+            This endpoint fetches queued or processing requests.
+        </Card>
+</CardGroup>
+    
