--- a/api-guide/apis/enterprise-api/flux-headshot/update-server.mdx
+++ b/api-guide/apis/enterprise-api/flux-headshot/update-server.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Enterprise: Update Server Endpoint"
+description: "This endpoint is used to update your dedicated server."
+openapi: "POST /flux_headshot/update_server"
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
