--- a/index.mdx
+++ b/index.mdx
@@ -22,7 +22,7 @@ Transform your ideas into reality with ModelsLab's comprehensive AI API suite. G
   <Card 
     title="API Reference" 
     icon="code" 
-    href="/api-guide/overview"
+    href="overview"
   >
     Complete API documentation with examples and integration guides
   </Card>
@@ -43,81 +43,46 @@ Explore our comprehensive suite of AI APIs designed for next-generation applicat
   <Card
     title="Image Generation"
     icon="image"
-    href="/api-guide/apis/image-generation/image-generation"
+    href="/image-generation/overview"
   >
     Create stunning visuals with 10,000+ Stable Diffusion models
   </Card>
   <Card
     title="Video Creation"
     icon="video"
-    href="/api-guide/apis/video-api/overview"
+    href="/video-api/overview"
   >
     Generate and edit videos from text prompts and existing footage
   </Card>
   <Card
     title="Voice & Audio"
     icon="microphone"
-    href="/api-guide/apis/voice-cloning/overview"
+    href="/voice-cloning/overview"
   >
     Text-to-speech, voice cloning, speech-to-text.
   </Card>
   <Card
     title="3D Generation"
     icon="cube"
-    href="http://localhost:3000/api-guide/apis/3d-api/overview"
+    href="/3d-api/overview"
   >
     Transform text and images into 3D models and objects
   </Card>
     <Card
     title="Uncensored Chat"
     icon="comment"
-    href="/api-guide/apis/uncensored-chat-api/overview"
+    href="/uncensored-chat-api/overview"
   >
     Enagage into conversation without censorship.
   </Card>
   <Card
     title="Deepfake"
     icon="mask"
-    href="/api-guide/apis/uncensored-chat-api/overview"
+    href="/deepfake-api/overview"
   >
     Generate Deepfake Videos
   </Card>
   
-</CardGroup>
-
-## Advanced Features
-
-Build for enterprise-grade applications.
-
-<CardGroup cols={2}>
-  <Card
-    title="Custom Model Training"
-    icon="brain"
-    href="/guides/model-training"
-  >
-    Fine-tune models with LoRa and DreamBooth on your datasets
-  </Card>
-  <Card
-    title="LLM & Chat APIs"
-    icon="comments"
-    href="/api-guide/llm"
-  >
-    Access uncensored chat and language model capabilities
-  </Card>
-  <Card
-    title="Image Editing Suite"
-    icon="wand-magic-sparkles"
-    href="/api-guide/image-editing"
-  >
-    Inpainting, outpainting, upscaling, and enhancement tools
-  </Card>
-  <Card
-    title="Deepfake & Face Swap"
-    icon="face-smile"
-    href="/api-guide/deepfake"
-  >
-    Create realistic face swaps and deepfake content
-  </Card>
 </CardGroup>
 
 ## Enterprise Solutions
@@ -163,14 +128,14 @@ Everything you need to integrate and optimize ModelsLab APIs.
   <Card
     title="API Reference"
     icon="code"
-    href="/api-guide"
+    href="/overview"
   >
     Complete API documentation with interactive examples
   </Card>
   <Card
     title="SDKs & Libraries"
     icon="box"
-    href="/sdks"
+    href="/sdk/python"
   >
     Official SDKs for Python, JavaScript, PHP, and more
   </Card>
@@ -180,12 +145,5 @@ Everything you need to integrate and optimize ModelsLab APIs.
     href="/examples"
   >
     Real-world implementation examples and tutorials
-  </Card>
-  <Card
-    title="Community & Support"
-    icon="users"
-    href="/community"
-  >
-    Join our Discord community and get help from experts
   </Card>
 </CardGroup>
