headhsot and geenral ep

--- a/api-guide/apis/enterprise-api/general/update-s3-details.mdx
+++ b/api-guide/apis/enterprise-api/general/update-s3-details.mdx
@@ -9,8 +9,12 @@ description: "This endpoint is used to update the S3 details on your dedicated s
 </Info>
 
 <Warning>
-  You need to give PutObjectAcl on S3 bucket. Else you won't be able to upload images to S3 bucket. Here is link to stackoverflow on how to do it: `https://stackoverflow.com/questions/36272286/getting-access-denied-when-calling-the-putobject-operation-with-bucket-level-per`
+  You need to give PutObjectAcl on S3 bucket. Else you won't be able to upload images to S3 bucket. 
 </Warning>
+
+<Tip>
+Here is link to stackoverflow on how to do it: `https://stackoverflow.com/questions/36272286/getting-access-denied-when-calling-the-putobject-operation-with-bucket-level-per`
+</Tip>
 
 ## Request
 Send a `POST` request to below endpoint. You have to pass the below listed request body parameters to update the S3 details.
